Crash in WebDocumentLoader::setNavigationID https://bugs.webkit.org/show_bug.cgi?id=134520

Reviewed by Anders Carlsson.

* WebProcess/WebPage/WebFrame.cpp:
(WebKit::WebFrame::didReceivePolicyDecision): Null-check the policy document loader.



Canonical link: https://commits.webkit.org/152503@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170674 268f45cc-cd09-0410-ab3c-d52691b4dbfc